added grid and style lint

--- a/css/style.css
+++ b/css/style.css
@@ -1,64 +1,70 @@
-
-section {
-  float: left;
-  padding: 1em;
-  box-sizing: border-box;
+body {
+  display: grid;
+  grid-template-columns: 0.5% 20% 20% 20% 20% 0.5%;
+  grid-template-rows: auto;
+  grid-template-areas:
+    ". logo nav nav nav ."
+    ". aside-left main main aside-right ."
+    ". footer1 footer2 footer3 footer4 .";
+  gap: 2rem 1%;
+  justify-content: space-evenly;
 }
 
 p {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 100;
 }
 
-h1 {
-  font-family: 'Montserrat', sans-serif;
+article > p {
+  margin: 0;
+}
+
+article > h1 {
+  font-family: "Mulish", sans-serif;
   font-weight: 400;
+  margin-bottom: 0;
 }
 
-.side-section {
-  width: 15%;
+.footer1 {
+  grid-area: footer1;
 }
 
-.main-section {
-  width: 70%;
+.footer2 {
+  grid-area: footer2;
 }
 
-footer {
-  clear: left
+.footer3 {
+  grid-area: footer3;
 }
 
-footer>p {
-  box-sizing: border-box;
+.footer4 {
+  grid-area: footer4;
+}
+
+nav {
+  grid-area: nav;
+}
+
+.aside-left {
+  grid-area: aside-left;
+}
+
+.aside-right {
+  grid-area: aside-right;
+}
+
+nav > a {
   float: left;
-  max-width: 25%;
-  padding: 2em;
+  font-family: "Mulish", sans-serif;
   color: #818692;
-}
-
-.navigation {
-  float: left;
-  box-sizing: border-box;
+  text-decoration: none;
+  width: 100%;
 }
 
 .logo {
-  float: left;
-  position: relative;
-  box-sizing: border-box;
+  grid-area: logo;
 }
 
 main {
-  clear: left
-}
-
-article {
-  box-sizing: content-box;
-  margin: 2em;
-}
-
-nav>a {
-  margin-left: 4em;
-  font-size: 2em;
-  font-family: 'Mulish';
-  color: #818692;
-  text-decoration: none;
+  grid-area: main;
 }
